back to using records for pattern elements instead of classes